[gd_scene load_steps=23 format=3 uid="uid://crdlrvq01i6oc"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_88na5"]
[ext_resource type="Texture2D" uid="uid://di6b8hsqqem85" path="res://assets/underwater_bg.jpeg" id="2_a2w6l"]
[ext_resource type="Texture2D" uid="uid://dgjjh7bgm5gmj" path="res://assets/fish/fish2.png" id="3_0agft"]
[ext_resource type="Texture2D" uid="uid://di6xunn16uh42" path="res://assets/bubbles/bubble_1.png" id="3_vnf8f"]
[ext_resource type="Texture2D" uid="uid://x255fodon8ny" path="res://assets/reef.png" id="5_7gltl"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xvl8g"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 400, 1)
spread = 20.0
initial_velocity_min = 100.0
initial_velocity_max = 120.0
gravity = Vector3(25, 0, 0)
scale_min = 3.0
scale_max = 5.5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1csb5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f76e5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_308nq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j3mx6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f6vkl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_poeua"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q47xt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ka35n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mu6fg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c5868"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ttn1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nxr84"]

[sub_resource type="Curve" id="Curve_3wpt7"]
max_value = 2.0
_data = [Vector2(0, 1.46354), 0.0, 0.0, 0, 0, Vector2(1, 0.702374), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_sfbii"]
curve = SubResource("Curve_3wpt7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aowsy"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(600, 1, 1)
direction = Vector3(0, 1, 0)
initial_velocity_min = -100.0
initial_velocity_max = -60.0
gravity = Vector3(0, -15, 0)
scale_max = 2.0
scale_curve = SubResource("CurveTexture_sfbii")
turbulence_noise_scale = 21.28

[sub_resource type="Environment" id="Environment_qf1y2"]
background_mode = 3
glow_enabled = true
glow_intensity = 0.5
glow_bloom = 0.3

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_88na5")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a2w6l")

[node name="Reef1" type="Sprite2D" parent="."]
position = Vector2(294, 384)
scale = Vector2(2.1, 2.1)
texture = ExtResource("5_7gltl")

[node name="FishSpawner" type="GPUParticles2D" parent="."]
position = Vector2(1, 301)
amount = 10
process_material = SubResource("ParticleProcessMaterial_xvl8g")
texture = ExtResource("3_0agft")
lifetime = 8.0

[node name="Reef2" type="Sprite2D" parent="."]
position = Vector2(900, 406)
scale = Vector2(3.5, 3.5)
texture = ExtResource("5_7gltl")

[node name="Title" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 34.0
offset_right = 1.0
offset_bottom = 253.0
grow_horizontal = 2
theme_override_colors/default_color = Color(1, 1, 0, 1)
theme_override_font_sizes/normal_font_size = 160
bbcode_enabled = true
text = "Bubble Marine"
fit_content = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -74.0
offset_right = 150.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.870588, 0.294118, 0.392157, 1)
theme_override_colors/font_hover_color = Color(0.246609, 0.468349, 1, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_1csb5")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_f76e5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_308nq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_j3mx6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_f6vkl")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_poeua")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q47xt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ka35n")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mu6fg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_c5868")
theme_override_styles/normal = SubResource("StyleBoxEmpty_3ttn1")
text = "Start"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.870588, 0.294118, 0.392157, 1)
theme_override_colors/font_hover_color = Color(0.247059, 0.466667, 0.882353, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_1csb5")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_f76e5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_308nq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_j3mx6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_f6vkl")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_poeua")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q47xt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ka35n")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mu6fg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_c5868")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nxr84")
text = "Quit"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.588235)
position = Vector2(574, 646)
amount = 40
process_material = SubResource("ParticleProcessMaterial_aowsy")
texture = ExtResource("3_vnf8f")
lifetime = 10.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qf1y2")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -73.0
offset_right = 228.0
offset_bottom = -19.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "A product by Ctrl + Alt + Win
Nguyen Vo Han Phong
Ho Thuan Khang"

[node name="Score" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.5
offset_top = -78.0
offset_right = 110.5
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 48
text = "HIGHSCORE: X"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
